<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mental Arithmetic - Archimedes</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="game_menu">Game menu</string>
    <string name="back">Back</string>
    <string name="start">Start</string>
    <string name="your_answer">Your Answer</string>
    <string name="press_start">Click Start to begin</string>
    <string name="your_name">Your name :</string>
    <string name="name">Name</string>
    <string name="remember">Remeber</string>
    <string name="clear">Clear</string>
    <string name="Guest">Guest</string>
    <string name="mental_arch">Mental Arithmetic</string>
    <string name="login">Login</string>
    <string name="version">v1.1</string>
    <string name="arch">Archimed</string>
    <string name="play">Play</string>
    <string name="stat">Statistics</string>
    <string name="set">Settings</string>
    <string name="exit">Exit</string>
    <string name="author">Author: Andrei Melnikov</string>
    <string name="email_andrey7melnikov_gmail_com">Email: andrey7melnikov@gmail.com</string>
    <string name="autohor_mail"> Write letters)</string>
    <string name="select_user">Select User :</string>
    <string name="guest">Guest</string>
    <string name="or_create_new">or create a new:</string>
    <string name="name_new_user">Name of the new user</string>
    <string name="settings">Settings</string>
    <string name="not_write_stat">Not write Statistics</string>
    <string name="clear_stat">clear Statistics</string>
    <string name="use_minus_in_game">Use a minus sign (-) in the game</string>
    <string name="hard_game">Hard Game (от 0 до 99)</string>
    <string name="player_name">Player Name:</string>
    <string name="remember_set">Not ask before the game</string>
    <string name="stats">Statistics</string>
    <string name="top_10">Top 10</string>
    <string name="last_10">Last 10</string>

</resources>
